--- a/african.html
+++ b/african.html
@@ -23,47 +23,21 @@
 				<h1>
 				Marriages<strong>: One Name Different Versions</strong></h1>
 	<div class="main">
-					<!-- InstanceBeginEditable name="content" -->
-					<p><strong>AFRICAN WEDDINGS</strong><br />
+	  <!-- InstanceBeginEditable name="content" -->
+	  <p><strong>AFRICAN WEDDING</strong><img src="images/african.jpg" width="740" height="364" /><br />
+					  African weddings are a family affair and involve the combining of two lives, two families, and sometimes even two communities! There are many different wedding traditions in the African continent and no two are exactly alike. However, in all the communities the bride plays a very special role and is treated with respect because she is a link between the unborn and the ancestors. A bride might eventually bear a very powerful child, so she is treated with respect. In some areas of East Africa the grooms family would even move to the brides village and set up a whole new house there. <br />
 					  <br />
-					  <img src="http://www.africaguide.com/images/shop/africaimp/346_1.jpg" alt="africa" width="195" height="284" border="0" align="LEFT" />African weddings are a family affair and involve the combining of two lives, two families, and sometimes even two communities! There are many different wedding traditions in the African continent and no two are exactly alike. However, in all the communities the bride plays a very special role and is treated with respect because she is a link between the unborn and the ancestors. A bride might eventually bear a very powerful child, so she is treated with respect. In some areas of East Africa the grooms family would even move to the brides village and set up a whole new house there. <br />
-					  <br />
-					  There are many steps that take place before marriage starting at a very young age where training takes place in how to be a suitable partner. Girls will many times go to circumcision schools where women teach them what is involved in marriage, and in some ethnic groups even learn secret codes and languages so that they can communicate with other married women. In the Wolof tribe there is even a time where the elders of the village gather with the bride and give advice and gifts. <br />
-					  <br />
+	  There are many steps that take place before marriage starting at a very young age where training takes place in how to be a suitable partner. Girls will many times go to  schools where women teach them what is involved in marriage, and in some ethnic groups even learn secret codes and languages so that they can communicate with other married women. In the Wolof tribe there is even a time where the elders of the village gather with the bride and give advice and gifts. 	  </p>
+	  <p><strong><a href="african-wedding-cultural-traditions.html">African Wedding Cultural Traditions</a></strong><br />
 					  Weddings can be very elaborate, involving feasting and dancing for days within a community, they can be very simple, or they can even be performed in huge marriage ceremonies involving many different couples. <br />
 					  <br />
 					  <a href="http://africaimports.info/go.asp?agent=africaguide&amp;Cc=AWA&amp;Bc=" target="_blank">Click Here For African Clothing For Your Wedding!</a><br />
 					  <br />
-				    <a href="http://www.africaguide.com/shop/gifts.htm#weddings" target="_blank">Click Here For Wedding Gift Ideas!</a></p>
-					<hr />
-					<p><br />
-					  <strong>African Wedding Cultural Traditions</strong><br />
-				    </p>
-					<dl>
-					  <dt><strong>Ethiopia</strong></dt>
-					  <dd>In Ethiopia the Karo people enhance a young brides beauty by tattooing her abdomen with different symbols.<br />
-					    <br />
-					    <a href="http://www.africaguide.com/culture/tribes/amhara.htm">Amhara people</a>: most marriages are negotiated by the two families, with a civil ceremony sealing the contract. A priest may be present. Divorce is allowed and must also be negotiated. There is also a &quot;temporary marriage,&quot; by oral contract before witnesses. The woman is paid housekeeper's wages, and is not eligible for inheritance, but children of the marriage are legally recognized and qualify for inheritance. Priests may marry but not eligible for divorce or remarriage. <br />
-				      </dd>
-					  <dt><strong>Kenya</strong></dt>
-					  <dd>The <a href="http://www.africaguide.com/culture/tribes/maasai.htm">Massai people</a> of Kenya grow up with children of their own age and normally form relationships with these people. However, in marriage women are given to a man they do not know who is much older then themselves. The bride packs all her belongings and is dressed in her finest jewelry. At the marriage ceremony the father of the bride spits on the brides head and breasts as a blessing and then she leaves with her husband walking to her new home she never looks back fearing that she will turn to stone. This can be a very sad experience for the bride, who is 13-16 years old and may walk a long way to get to her new house. In order to ward off bad luck sometimes the women of the grooms family will even insult the bride. <br />
-					    <br />
-					    The Swahili of Kenya bathe brides in sandalwood oils and tatoo henna designs on her limbs. A women elder, or somo, gives instructions to the bride on how to please her husband. Sometimes the somo will even hide under the bed in case there are any problems! <br />
-					    <br />
-					    In another area of Kenya the main feature of the wedding is the kupamba, which happens the night after the wedding, it is basically a display of the bride. It is very popular because it is a party just for the women, and when they enter the party they are able to take off their large veils and show off elaborate hairstyles and dresses. The party can almost become a competition because it is believed that if a women has a good husband he will get her beautiful jewelry and clothes. <br />
-					    <br />
-					    For the <a href="http://www.africaguide.com/culture/tribes/samburu.htm">Samburu tribe</a> marriage is a unique series of elaborate ritual. Great importance is given to the preparation of gifts by the bridegroom (two goatskins, two copper earrings, a container for milk, a sheep) and of gifts for the ceremony. The marriage is concluded when a bull enters a hut guarded by the bride's mother, and is killed.<br />
-				      </dd>
-					  <dt><strong>Namibia</strong></dt>
-					  <dd>The Himba people of Namibia kidnap a bride before the ceremony and dress her in a leather marriage headdress. After the ceremony she is brought into the house where the family tells her what her responsibilities will be as the wife and then anoint her with butterfat from cows. This shows that she has been accepted into the family.<br />
-				      </dd>
-					  <dt><strong>Niger</strong></dt>
-					  <dd>The Wodabee of Niger court their cousins for marriage. The male cousins wear powerful amulets which are supposed to heighten their attractiveness to the girl. If there are two cousins who desire the same girl the girl chooses the one she wishes and the other man is welcomed into the home of the couple, and if consent is given by the bride he may even share her bed! <br />
-				      </dd>
-					  <dt><strong>Sudan</strong></dt>
-					  <dd>The Neur people of southern Sudan the groom must pay 20-40 cattle, the marriage is completed only after the wife has born 2 children. If the wife only bears one child and the husband asks for a divorce he can also ask for either the return of the cattle or the first child. Divorce therefore is very difficult. Another interesting fact is that if a husband dies then the husbands family must provide a brother to the widow and any children born to the brother are considered the deceased's children</dd>
-				    </dl>
-					<!-- InstanceEndEditable -->
+		            <a href="http://www.africaguide.com/shop/gifts.htm#weddings" target="_blank">Click Here For Wedding Gift Ideas!</a><br />
+      </p>
+	  <dl>
+      </dl>
+	  <!-- InstanceEndEditable -->
     </div>
   </div>
 </div>
