fixed more pages

--- a/african.html
+++ b/african.html
@@ -24,9 +24,10 @@
 				Marriages<strong>: One Name Different Versions</strong></h1>
 	<div class="main">
 	  <!-- InstanceBeginEditable name="content" -->
-	  <p><strong>AFRICAN WEDDING</strong><img src="images/african.jpg" width="740" height="364" /><br />
-					  African weddings are a family affair and involve the combining of two lives, two families, and sometimes even two communities! There are many different wedding traditions in the African continent and no two are exactly alike. However, in all the communities the bride plays a very special role and is treated with respect because she is a link between the unborn and the ancestors. A bride might eventually bear a very powerful child, so she is treated with respect. In some areas of East Africa the grooms family would even move to the brides village and set up a whole new house there. <br />
-					  <br />
+	  <h2>African Wedding</h2>
+      <img src="images/african.jpg" width="740" height="364" />
+	  <p>African weddings are a family affair and involve the combining of two lives, two families, and sometimes even two communities! There are many different wedding traditions in the African continent and no two are exactly alike. However, in all the communities the bride plays a very special role and is treated with respect because she is a link between the unborn and the ancestors. A bride might eventually bear a very powerful child, so she is treated with respect. In some areas of East Africa the grooms family would even move to the brides village and set up a whole new house there. </p>
+					  <p>
 	  There are many steps that take place before marriage starting at a very young age where training takes place in how to be a suitable partner. Girls will many times go to  schools where women teach them what is involved in marriage, and in some ethnic groups even learn secret codes and languages so that they can communicate with other married women. In the Wolof tribe there is even a time where the elders of the village gather with the bride and give advice and gifts. 	  </p>
 	  <p><strong><a href="african-wedding-cultural-traditions.html">African Wedding Cultural Traditions</a></strong><br />
 					  Weddings can be very elaborate, involving feasting and dancing for days within a community, they can be very simple, or they can even be performed in huge marriage ceremonies involving many different couples. <br />
