--- a/christianity.html
+++ b/christianity.html
@@ -24,8 +24,7 @@
 				Marriages<strong>: One Name Different Versions</strong></h1>
 	<div class="main">
 					<!-- InstanceBeginEditable name="content" -->
-					<p>Congratulations! You&rsquo;re engaged!</p>
-					<p>Before you happily starting scribbling a list of guests and giggling at how great you gift list will be though, you will need to organise a wedding ceremony that suits you both – and if you both are practising Catholics, you will no doubt want to have a Catholic wedding.</p>
+					<h2>Christianity</h2> <img src="images/Christianity.jpg" width="700" height="400" alt="Christianity" />
 					<p>If that&rsquo;s the case, you can choose to have your Catholic ceremony held with Holy Communion included for both of you, (called a Nuptial Mass) or, for example, if one of you is Catholic and one isn&rsquo;t, you can choose to have your Catholic ceremony - including readings and prayers - but no Communion.</p>
 					<p>The vows are the same, whichever version you choose!</p>
 					<h3>First you need to see your parish priest…</h3>
@@ -73,10 +72,7 @@
 					  <li><strong>You can decorate the church with flowers,</strong> but rather than strip the church of them afterwards, couples usually leave some of their flowers as a sort of &lsquo;votive offering&rsquo; to decorate the church after the wedding -- a gesture that&rsquo;s always appreciated by the priest and his parishioners.</li>
 					  <li><strong>A <a href="http://www.confetti.co.uk/weddingDirectory/search/0.do">photographer</a></strong> is allowed and usually video cameras, although sometimes the priest might impose restrictions on when and where they can film. Have a chat to the priest about this beforehand.</li>
 					  <li><strong>Rules on <a href="http://www.confetti.co.uk/category/navigation/8591-0-Confetti_Table_Decorations.do">confetti</a> throwing</strong> vary from parish to parish too (as it does make a big mess for them to clear up afterwards!) Have a quick check with the priest about this.</li>
-					  <li><strong>It&rsquo;s customary to give the priest</strong> an offering for his efforts, which will have included a fair amount of paperwork. How much is down to you and what you can afford. Between £50 and £70 is probably reasonable; more is generous. The groom or best man, or sometimes the bride&rsquo;s father will usually give the offering to the priest in an envelope after the service. It&rsquo;s customary to invite the priest to the reception too… he might be glad of a relaxing drink!</li>
-				    </ol>
-					<p>&nbsp;</p>
-					<p>&nbsp;</p>
+					  <li><strong>It&rsquo;s customary to give the priest</strong> an offering for his efforts, which will have included a fair amount of paperwork. How much is down to you and what you can afford. Between £50 and £70 is probably reasonable; more is generous. The groom or best man, or sometimes the bride&rsquo;s father will usually give the offering to the priest in an envelope after the service. It&rsquo;s customary to invite the priest to the reception too… he might be glad of a relaxing drink!</li> </ol>
 					<!-- InstanceEndEditable -->
     </div>
   </div>
