--- a/greek.html
+++ b/greek.html
@@ -24,6 +24,8 @@
 				Marriages<strong>: One Name Different Versions</strong></h1>
 	<div class="main">
 					<!-- InstanceBeginEditable name="content" -->
+					<h2>Greek Wedding</h2>
+				    <img src="images/Greek.jpg" width="700" height="400" alt="Greek" />
 					<p>In Britain, there are 30,000 people of the Greek Orthodox faith from the mainland of Greece, and a further 300,000 Cypriots. The Greek Orthodox Church and the Roman Catholic Church were in Eucharistic Communion until 1054,when the churches split over differences of dogma and ecclesiastical administration.The Greek Orthodox wedding is very similar, in many ways, to a traditional Church of England wedding. The rituals of the day are alike, but there is little flexibility in the service itself -- you cannot have readings or music that is not already incorporated into the service, nor is any secular content allowed.</p>
 					<h3>What happens at a Greek Orthodox wedding</h3>
 					<ul type="disc">
