--- a/hindu.html
+++ b/hindu.html
@@ -24,6 +24,8 @@
 				Marriages<strong>: One Name Different Versions</strong></h1>
 	<div class="main">
 					<!-- InstanceBeginEditable name="content" -->
+					<h2>Hindu</h2>
+                    <img src="images/Hindu.jpg" width="700" height="400" alt="Hindu" />
 					<p>The Hindu marriage usually takes in the bride&rsquo;s hometown or city. Traditionally, it is organised and paid for by the bride&rsquo;s parents. For Orthodox Hindus, mixed marriage is considered inappropriate: for others, it is possible to marry someone of a different religion without either partner having to convert.</p>
 					<p>The bride is known as the Dulhan, the groom as the Dulha.</p>
 					<h3>What is a Hindu wedding?</h3>
