--- a/jewish.html
+++ b/jewish.html
@@ -24,6 +24,7 @@
 				Marriages<strong>: One Name Different Versions</strong></h1>
 	<div class="main">
 					<!-- InstanceBeginEditable name="content" -->
+					<h2>Jewish Wedding</h2>					<img src="images/Jewish.jpg" width="740" height="364" alt="Jewish" />
 					<p>A traditional Jewish wedding is full of meaningful rituals, symbolizing the beauty of the relationship of husband and wife, as well as their obligations to each other and to the Jewish people.</p>
 					<p>The following guide explains the beauty and joy of these the Jewish wedding traditions.</p>
 					<p><strong>The Wedding Day</strong></p>
