--- a/muslim.html
+++ b/muslim.html
@@ -24,6 +24,8 @@
 				Marriages<strong>: One Name Different Versions</strong></h1>
 	<div class="main">
 					<!-- InstanceBeginEditable name="content" -->
+					<h2>Muslim</h2>
+				    <img src="images/Muslim.jpg" width="700" height="400" alt="Muslim" />
 					<p>Islam, the world&rsquo;s second largest religion after Christianity, was founded by the Prophet Muhammad in the seventh century AD. It is still the leading faith in the Arab world, as well as in most of the Middle East. Islam is much more than a religion: it also supplies the guiding principles of political and social life.</p>
 					<p>Muslim marriages can be conducted in different ways, depending on the culture in which they are arranged. The following information refers, in the most part, to the Asian world. Here, Muslim marriages are generally arranged by the parents, with the bride and groom themselves having the final say about who they will wed. The actual proposal comes from the woman, who contacts the man through an intermediary -- normally a male relative.</p>
 					<p>Strictly speaking, Muslim women cannot marry outside their faith. Muslim men can, in principle, marry non-Muslims, as long as they are Christian or Jewish and their children are raised as Muslims. Alternatively, it is possible for a woman to convert to the Muslim faith by performing the Shadada, a simple ceremony in which the convert accepts Allah and Mohammed.</p>
