--- a/christianity.html
+++ b/christianity.html
@@ -66,13 +66,7 @@
 					  <li>The priest will then introduce you as a newly married couple!</li>
 				    </ul>
 					<p>You will then be a happily married bride and groom and you can parade back down the aisle of the church with huge grins on your faces!</p>
-					<h3>Practical points to bear in mind…</h3>
-					<ol>
-					  <li><strong>The order of seating</strong> at a Catholic wedding is up to you. Bear in mind though, that if you are having a Mass, and especially if it is at a scheduled Mass time, you are likely to be joined by other parishioners who are not your guests. They will usually be discreet and leave the front rows for your friends and family.</li>
-					  <li><strong>You can decorate the church with flowers,</strong> but rather than strip the church of them afterwards, couples usually leave some of their flowers as a sort of &lsquo;votive offering&rsquo; to decorate the church after the wedding -- a gesture that&rsquo;s always appreciated by the priest and his parishioners.</li>
-					  <li><strong>A <a href="http://www.confetti.co.uk/weddingDirectory/search/0.do">photographer</a></strong> is allowed and usually video cameras, although sometimes the priest might impose restrictions on when and where they can film. Have a chat to the priest about this beforehand.</li>
-					  <li><strong>Rules on <a href="http://www.confetti.co.uk/category/navigation/8591-0-Confetti_Table_Decorations.do">confetti</a> throwing</strong> vary from parish to parish too (as it does make a big mess for them to clear up afterwards!) Have a quick check with the priest about this.</li>
-					  <li><strong>It&rsquo;s customary to give the priest</strong> an offering for his efforts, which will have included a fair amount of paperwork. How much is down to you and what you can afford. Between £50 and £70 is probably reasonable; more is generous. The groom or best man, or sometimes the bride&rsquo;s father will usually give the offering to the priest in an envelope after the service. It&rsquo;s customary to invite the priest to the reception too… he might be glad of a relaxing drink!</li> </ol>
+					<h2><a href="practical-points.html">Practical points to bear in mind</a></h2>
 					<!-- InstanceEndEditable -->
     </div>
   </div>
