--- a/jewish.html
+++ b/jewish.html
@@ -30,14 +30,8 @@
 					<p><strong>The Wedding Day</strong></p>
 					<p>The dawning wedding day heralds the happiest and holiest day of one's life. This day is considered a personal Yom Kippur for the chatan (Hebrew for groom) and kallah (bride), for on this day all their past mistakes are forgiven as they merge into a new, complete soul.</p>
 					<p>As on Yom Kippur, both the chatan and kallah fast (in this case, from dawn until after the completion of the marriage ceremony). And at the ceremony, the chatan wears a kittel, the traditional white robe worn on Yom Kippur.</p>
-					<p>[Sefardim do not have the custom to fast and wear a kittel.]</p>
-					<p><strong>Kabbalat Panim</strong></p>
-					<p>It is customary for the chatan and kallah not to see each other for one week preceding the wedding. This increases the anticipation and excitement of the event. Therefore, prior to the wedding ceremony, the chatan and kallah greet guests separately. This is called &quot;Kabbalat Panim.&quot;</p>
-					<p>Jewish tradition likens the couple to a queen and king. The kallah will be seated on a &quot;throne&quot; to receive her guests, while the chatan is surrounded by guests who sing and toast him.</p>
-					<p>At this time there is an Ashkenazi tradition for the mother of the bride and the mother of the groom to stand together and break a plate. The reason is to show the seriousness of the commitment ― just as a plate can never be fully repaired, so too a broken relationship can never be fully repaired.</p>
-					<p><strong>Badeken</strong></p>
-					<p>Next comes the badeken, the veiling of the kallah by the chatan. The veil symbolizes the idea of modesty and conveys the lesson that however attractive physical appearances may be, the soul and character are paramount. It is reminiscent of Rebecca covering her face before marrying Isaac (Genesis ch. 29).</p>
-					<p>The Ashkenazi custom is that the chatan, accompanied by family and friends, proceeds to where the kallah is seated and places the veil over her face. This signals the groom's commitment to clothe and protect his wife.</p>
+					<p>Sefardim do not have the custom to fast and wear a kittel.					</p>
+					<h2><a href="more-on-jewish.html">Jewish Tradition</a></h2>
 					<p><strong>Chuppah</strong></p>
 					<p><img border="0" align="right" src="http://articles.aish.com/graphics/articles/chuppah.jpg" alt="" />The wedding ceremony takes place under the chuppah (canopy), a symbol of the home that the new couple will build together. It is open on all sides, just as Abraham and Sarah had their tent open all sides to welcome people in unconditional hospitality.</p>
 					<p>The Ashkenazi custom is to have the chuppah ceremony outside under the stars, as a sign of the blessing given by God to the patriarch Abraham, that his children shall be &quot;as the stars of the heavens&quot; (Genesis 15:5). Sefardim generally have the chuppah indoors.</p>
