--- a/african.html
+++ b/african.html
@@ -29,9 +29,9 @@
       <h2><strong><a href="african-wedding-cultural-traditions.html">African Wedding Cultural Traditions</a></strong></h2>
       <br />
       <p>Weddings can be very elaborate, involving feasting and dancing for days within a community, they can be very simple, or they can even be performed in huge marriage ceremonies involving many different couples.</p>
-      <a href="http://africaimports.info/go.asp?agent=africaguide&amp;Cc=AWA&amp;Bc=" target="_blank">Click Here For African Clothing For Your Wedding!</a><br />
-      <br />
-      <a href="http://www.africaguide.com/shop/gifts.htm#weddings" target="_blank">Click Here For Wedding Gift Ideas!</a> <!-- InstanceEndEditable --> </div>
+      <p><a href="http://africaimports.info/go.asp?agent=africaguide&amp;Cc=AWA&amp;Bc=" target="_blank">Click Here For African Clothing For Your Wedding!</a><br />
+        <a href="http://www.africaguide.com/shop/gifts.htm#weddings" target="_blank">Click Here For Wedding Gift Ideas!</a> </p>
+    <!-- InstanceEndEditable --> </div>
   </div>
 </div>
 </body>
